--- a/quiz_system/css/admin.css
+++ b/quiz_system/css/admin.css
@@ -19,17 +19,18 @@
                 padding-top: 0px;
             }
 
-			.content{
-				width: 800px;
+			       .content{
+				        width: 800px;
                 margin: auto;
                 padding: 10px;
                 border-radius: 20px;
                 box-shadow: 0px 0px 10px #666666;
                 border: 1px solid #CCCCCC;
                 position: relative;
-                top: 10px;
-				display:none;
-			}
+                top: 140px;
+                background-color: WHITE;
+				        display:none;
+			       }
 
 			#admin_menu{
 				width:700px;
@@ -113,3 +114,163 @@
                 width: 100% ;
                 z-index: 1000 ;
             }
+
+#Hello{
+    margin-left: 10px;
+    font: bold 15px/18px sans-serif;
+    border-right: double;
+    padding: 12px;
+    padding-left: 5px;
+}
+#usr{
+    text-transform: uppercase;
+}
+
+a li, li a li {
+    text-decoration: none;
+    color: BLACK;
+}
+
+
+ul {
+  text-align: left;
+  display: inline;
+  margin: 0;
+  padding: 15px 4px 17px 0;
+  list-style: none;
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+}
+ul li {
+  font: bold 12px/18px Arial;
+  display: inline-block;
+  margin-right: -4px;
+  position: relative;
+  padding: 15px 20px;
+  background: #fff;
+  cursor: pointer;
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -ms-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
+}
+ul li:hover, ul a li:hover {
+  background: #555;
+  color: #fff;
+}
+ul li ul {
+  padding: 0;
+  position: absolute;
+  top: 48px;
+  left: 0;
+  width: 155px;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  display: none;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transiton: opacity 0.2s;
+  -moz-transition: opacity 0.2s;
+  -ms-transition: opacity 0.2s;
+  -o-transition: opacity 0.2s;
+  -transition: opacity 0.2s;
+}
+ul li ul li { 
+  background: #555;
+  display: block; 
+  color: #fff;
+  text-shadow: 0 -1px 0 #000;
+}
+
+ul li ul li:hover { background: #666; }
+ul li:hover ul {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+}
+
+ul li ul li ul {
+  padding: 0;
+  position: absolute;
+  top: 0px;
+  left: 150px;
+  width: 150px;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+  display: none;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transiton: opacity 0.2s;
+  -moz-transition: opacity 0.2s;
+  -ms-transition: opacity 0.2s;
+  -o-transition: opacity 0.2s;
+  -transition: opacity 0.2s;
+}
+
+ul li ul li ul li { 
+  background: #555;
+  display: block; 
+  color: #fff;
+  text-shadow: 0 -1px 0 #000;
+}
+
+ul li ul li ul li:hover { background: #666; }
+
+ul li ul:hover li ul, ul li:hover ul li ul{
+    display: none;
+}
+
+ul li ul li:hover ul {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+}
+
+
+            .black_overlay{
+                display: none;
+                position: fixed;
+                top: 0%;
+                left: 0%;
+                width: 100%;
+                height: 100%;
+                background-color: black;
+                z-index:1001;
+                -moz-opacity: 0.6;
+                opacity:.60;
+                filter: alpha(opacity=60);
+            }
+
+            .white_content {
+                display: none;
+                position: fixed;
+                width: 450px;
+                height: 200px;
+                margin: -130px 0 0 -225px;
+                top: 50%;
+                left: 50%;
+                padding: 10px;
+                background-color: black;
+                z-index:1002;
+                overflow: auto;
+            }
+
+            #add_to_quiz{
+                font-size: 15px;
+                border-width: 0px;
+                padding: 10px;
+                background-color:#003366;
+                color: #FFFFFF;
+
+
+            }
+            #add_to_quiz:hover{
+              background-color: #c4dcf5;
+              color: #000000;
+              cursor: pointer;
+            }
+
