--- a/quiz_system/css/register.css
+++ b/quiz_system/css/register.css
@@ -30,19 +30,9 @@
     */
 
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+.login, .reg_label, 
+ #login, #password, .login-submit, 
+ .login-button{
   margin: 0;
   padding: 0;
   border: 0;
@@ -54,31 +44,37 @@ time, mark, audio, video {
 
 
 
-body, .login-submit, .login-submit:before, .login-submit:after {
+#register, .login-submit, .login-submit:before, .login-submit:after {
   background: #373737 url("../img/bg.png") 0 0 repeat;
 }
 
-body {
+#register {
   font: 14px/20px 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #404040;
   line-height: 1;
+  overflow: hidden;
 }
 
 
 .login {
   position: relative;
-  margin: 80px auto;
+  top: 50%;
+  left: 50%;
+  margin-left: -160px;
+  margin-top: -75px;
   width: 400px;
   padding-right: 32px;
   font-weight: 300;
   color: #a8a7a8;
   text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.8);
+  overflow: hidden;
+
 }
 .login p {
   margin: 0 0 10px;
 }
 
-input, button, label {
+#login,#password, .login-button, .reg_label {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 15px;
   font-weight: 300;
@@ -87,7 +83,7 @@ input, button, label {
   box-sizing: border-box;
 }
 
-input[type=text], input[type=password] {
+#login, #password {
   padding: 0 10px;
   width: 300px;
   height: 40px;
@@ -99,16 +95,15 @@ input[type=text], input[type=password] {
   -webkit-box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.06);
   box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.06);
 }
-input[type=text]:focus, input[type=password]:focus {
+#login:focus, #password:focus {
   color: white;
   background: rgba(0, 0, 0, 0.1);
   outline: 0;
 }
 
-label {
-  float: left;
-  width: 100px;
-  line-height: 40px;
+.reg_label {
+  width: 400px;
+  line-height: 25px;
   padding-right: 10px;
   font-weight: 100;
   text-align: right;
@@ -117,8 +112,8 @@ label {
 
 .login-submit {
   position: absolute;
-  top: 12px;
-  right: 0;
+  top: 44px;
+  right: 90px;
   width: 48px;
   height: 48px;
   padding: 8px;
@@ -203,7 +198,7 @@ label {
   padding: 0;
 }
 
-.lt-ie9 input[type=text], .lt-ie9 input[type=password] {
+.lt-ie9 #login, .lt-ie9 #password {
   line-height: 40px;
   background: #282828;
 }
@@ -219,13 +214,3 @@ label {
 .lt-ie9 .login-button {
   line-height: 48px;
 }
-
-.message{
-  color: #CCCCCC;
-  font-size: 12pt;
-  font-family: sans-serif;
-  text-align: center;
-}
-
-
-
