progress made- Quiz List view created | admin panel being worked on

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6499,4 +6499,7 @@ body.stop-scrolling {
 body {
   padding-top: 70px; }
 
+a:hover {
+  cursor: pointer; }
+
 /*# sourceMappingURL=app.css.map */
